1998-03-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m: Define WindowsArguments as Arguments during load of
	tkWinInt.h.  Define BOOL as BOOL_ during load of tkInt.h.
	Do these includes before Swarm class includes.

	* internal.h: Don't include X11/xpm.h if __WIN32__.
	gnu-win32 B19 supplies X11 header files.  

        * internal.[hm]: Make width and height arguments unsigned.

	* internal.m: Don't include tkobjc/Widget.m. Include internal.h
	first.  Define BOOL to be BOOL_ to avoid conflict with Xmd.h.
	Include tkInt.h and, if __WIN32__, tkWinInt.h. 
	(tkobjc_linkVar): Make second argument void *.
	tkobjc_raster_{fillRectangle,drawPoint,createContext,createPixmap,
	setBackground,copy,flush}: New functions.

	* internal.h: Define Colormap as X11Colormap before including X11
	things.  Otherwise, don't try to preserve Colormap preprocessor
	definitions.  Include and define Raster class.  Declare
	tkobjc_raster_{fillRectangle,drawPoint,createContext,createPixmap,
	setBackground,copy,flush}.

	* XDrawer.h: Include internal.h instead of X11/Xlib.h.

	* Raster.m ([Raster -createEnd]): Don't set display or xwin
	(variables removed).
	([Raster -getDisplay]): Removed.
	([Raster -createEnd]): Use tkobjc_raster_createContext and
	tkobjc_raster_createPixmap instead of calling X primitives.
	([Raster -setColormap:]): Use tkobjc_raster_setBackground instead
	of using X primitives.
	([Raster -setWidth:Height:]): Use tkobjc_raster_createPixmap and
	tkobjc_raster_copy instead of using X primitives.
	([Raster -erase]): Use tkobjc_raster_fillRectangle rather than
	using X primitives.  Don't bother preserving foreground color.
	([Raster -drawPointX:Y:Color:]): Use tkobjc_raster_drawPoint
	rather than X primitives.
	([Raster -fillRectangleX0:Y0:X1:Y1:Color:]): Use
	tkobjc_raster_fillRectangle rather than using X primitives.
	([Raster -drawSelf]): Use tkobjc_raster_flush rather than 
	X primitives.

	* Raster.h (Raster):  Make tkwin, gc, pm, width and height